# duoAlert

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  alert-oxide.rs  alert.py  alert.py.scaffold  config-example.json  docker-compose.yml  phrases.json  requirements.txt
config/: config-example.json
src/: main.rs
