[package]
name = "duoAlertOxide"
version = "0.1.0"
authors = ["parkcitymedia <blakemichaelgaynor@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
error-chain = "0.12"
#json candidates
## og json?
#json = "0.12"
## serde is hyped up
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
reqwest = "0.11"